--- a/125_G.vcxproj.filters
+++ b/125_G.vcxproj.filters
@@ -35,6 +35,7 @@
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="GardenTool.cpp" />
     <ClCompile Include="Shovel.cpp" />
+    <ClCompile Include="Hoe.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network\Client.h" />
@@ -88,6 +89,7 @@
     <ClInclude Include="ConfigReader.h" />
     <ClInclude Include="GardenTool.h" />
     <ClInclude Include="Shovel.h" />
+    <ClInclude Include="Hoe.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
