--- a/125_G.vcxproj
+++ b/125_G.vcxproj
@@ -194,6 +194,7 @@
     <ClCompile Include="Hoe.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="Poison.cpp" />
     <ClCompile Include="Seed.cpp" />
     <ClCompile Include="GardenTool.cpp" />
     <ClCompile Include="Shovel.cpp" />
@@ -233,6 +234,7 @@
     <ClInclude Include="Holdable.h" />
     <ClInclude Include="DepthMap.h" />
     <ClInclude Include="Particle.h" />
+    <ClInclude Include="Poison.h" />
     <ClInclude Include="Seed.h" />
     <ClInclude Include="GardenTool.h" />
     <ClInclude Include="Shovel.h" />
