--- a/packages.config
+++ b/packages.config
@@ -4,4 +4,5 @@
   <package id="glm" version="0.9.9.800" targetFramework="native" />
   <package id="nupengl.core" version="0.1.0.1" targetFramework="native" />
   <package id="nupengl.core.redist" version="0.1.0.1" targetFramework="native" />
+  <package id="SoLoud-wav" version="2020.2.7" targetFramework="native" />
 </packages>
