--- a/125_G.vcxproj.filters
+++ b/125_G.vcxproj.filters
@@ -19,7 +19,6 @@
     <ClCompile Include="ColliderCircle.cpp" />
     <ClCompile Include="PhysicsEngine.cpp" />
     <ClCompile Include="DepthMap.cpp" />
-    <ClCompile Include="Network\ServerMain.cpp" />
     <ClCompile Include="UI\imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="UI\imgui\imgui_tables.cpp" />
     <ClCompile Include="UI\imgui\imgui_widgets.cpp" />
@@ -40,6 +39,7 @@
     <ClCompile Include="VeggieNet.cpp" />
     <ClCompile Include="WateringCan.cpp" />
     <ClCompile Include="Fertilizer.cpp" />
+    <ClCompile Include="ServerMain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network\Client.h" />
