Added glue without functionality

--- a/125_G.vcxproj
+++ b/125_G.vcxproj
@@ -193,6 +193,7 @@
     <ClCompile Include="DepthMap.cpp" />
     <ClCompile Include="FBO.cpp" />
     <ClCompile Include="Fertilizer.cpp" />
+    <ClCompile Include="Glue.cpp" />
     <ClCompile Include="Hoe.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Particle.cpp" />
@@ -235,6 +236,7 @@
     <ClInclude Include="FBO.h" />
     <ClInclude Include="Fertilizer.h" />
     <ClInclude Include="glm.h" />
+    <ClInclude Include="Glue.h" />
     <ClInclude Include="Hoe.h" />
     <ClInclude Include="Holdable.h" />
     <ClInclude Include="DepthMap.h" />
