--- a/125_G.vcxproj.filters
+++ b/125_G.vcxproj.filters
@@ -100,6 +100,7 @@
     <ClInclude Include="WateringCan.h" />
     <ClInclude Include="Fertilizer.h" />
     <ClInclude Include="Glue.h" />
+    <ClInclude Include="SoundEngine.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
