--- a/125_G.vcxproj.filters
+++ b/125_G.vcxproj.filters
@@ -41,6 +41,7 @@
     <ClCompile Include="Fertilizer.cpp" />
     <ClCompile Include="ServerMain.cpp" />
     <ClCompile Include="Glue.cpp" />
+    <ClCompile Include="GlueOnGround.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network\Client.h" />
@@ -101,6 +102,7 @@
     <ClInclude Include="Fertilizer.h" />
     <ClInclude Include="Glue.h" />
     <ClInclude Include="SoundEngine.h" />
+    <ClInclude Include="GlueOnGround.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
