--- a/125_G.vcxproj.filters
+++ b/125_G.vcxproj.filters
@@ -42,6 +42,7 @@
     <ClCompile Include="ServerMain.cpp" />
     <ClCompile Include="Glue.cpp" />
     <ClCompile Include="GlueOnGround.cpp" />
+    <ClCompile Include="Indicator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network\Client.h" />
@@ -103,6 +104,7 @@
     <ClInclude Include="Glue.h" />
     <ClInclude Include="SoundEngine.h" />
     <ClInclude Include="GlueOnGround.h" />
+    <ClInclude Include="Indicator.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
