--- a/125_G.vcxproj
+++ b/125_G.vcxproj
@@ -311,6 +311,8 @@
     <None Include="shaders\shader.vert" />
     <None Include="shaders\shadows.frag" />
     <None Include="shaders\shadows.vert" />
+    <None Include="shaders\water.frag" />
+    <None Include="shaders\water.vert" />
     <None Include="shaders\world.frag" />
     <None Include="shaders\world.vert" />
   </ItemGroup>
