skydome seperated (need to adjust shader for it but no more shadow casting)

--- a/125_G.vcxproj
+++ b/125_G.vcxproj
@@ -296,6 +296,7 @@
     <None Include="packages.config" />
     <None Include="shaders\animation.frag" />
     <None Include="shaders\animation.vert" />
+    <None Include="shaders\dome.frag" />
     <None Include="shaders\leaves.frag" />
     <None Include="shaders\leaves.vert" />
     <None Include="shaders\model.frag" />
