--- a/125_G.vcxproj
+++ b/125_G.vcxproj
@@ -315,6 +315,9 @@
     <Image Include="UI\Pictures\p1.jpg" />
     <Image Include="UI\Pictures\p2.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="..\..\..\Downloads\FM-Victory.wav" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="packages\nupengl.core.redist.0.1.0.1\build\native\nupengl.core.redist.targets" Condition="Exists('packages\nupengl.core.redist.0.1.0.1\build\native\nupengl.core.redist.targets')" />
